--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     Hey! I am Shashank.
     I am a student at Gautam Buddha University.
+    I am currently in 3rd year
+    
 </body>
 </html>
