updated current status

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     Hey! I am Shashank.
     I am a student at Gautam Buddha University.
     I am currently in 3rd year
-    
+    Currently due to covid I am at sice 2 year
 </body>
 </html>
