--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shashank project</title>
+    <title>Shashank pandey project</title>
 </head>
 <body>
-    Hey! I am Shashank.
+    Hey! I am Shashank pandey.
     I am a student at Gautam Buddha University.
     I am currently in 3rd year
     Currently due to covid I am at sice 2 year
