--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     Hey! I am Shashank pandey.
     I am a student at Gautam Buddha University.
     I am currently in 3rd year
-    Currently due to covid I am at sice 2 year
+    Currently due to covid I am at sice 2 year.
+    I have started learning web dev
 </body>
 </html>
