--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     I am a student at Gautam Buddha University.
     I am currently in 3rd year
     Currently due to covid I am at sice 2 year
+    I like to teach and code.
 </body>
 </html>
